# engine

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  mise.toml  test_in_the_syntax.rs
.github/workflows/: drafter.yml
examples/: driving_test.rules  person.json
examples/testcontainers/go/: README.md  go.mod  policy_engine_test.go
examples/testcontainers/rust/: Cargo.toml  README.md
examples/testcontainers/rust/src/: lib.rs
pests/: base.pest  conditions.pest  grammer.pest  grammer.txt  rules.pest  values.pest
src/: error.rs  evaluator.rs  grammer.pest  lib.rs  main.rs  model.rs  parser.rs
src/runner/: error.rs  evaluator.rs  lib.rs  mod.rs  model.rs  parser.rs  trace.rs  utils.rs
src/runner/error/: lib.rs  mod.rs
src/runner/evaluator/: lib.rs  mod.rs
src/runner/model/: lib.rs  mod.rs
src/runner/parser/: lib.rs  mod.rs
src/runner/trace/: lib.rs  mod.rs
tests/: api_tests.rs
