[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"]}