[package]
name = "engine"
version = "1.0.0"
edition = "2021"

[build-dependencies]

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
axum = {  version = "0.8.4", features = ["tracing", "macros"] }
tokio = { version = "1.46.0", features = ["full"]}
flags-rs = "0.1.4"