[package]
name = "engine"
version = "1.0.0"
edition = "2021"

[build-dependencies]

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.15"
axum = {  version = "0.8.4", features = ["tracing", "macros"] }
tokio = { version = "1.47.1", features = ["full"]}
flags-rs = "0.1.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.6", features = ["full"] }